--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <version>5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
