--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+server.error.whitelabel.enabled=false
+server.error.path=/error
